--- a/FTWeb/View_Mobile/WX/hd/dbqb.html
+++ b/FTWeb/View_Mobile/WX/hd/dbqb.html
@@ -94,7 +94,7 @@ initial-scale=1,maximum-scale=1,user-scalable=no">
     })
 
 
-(function($){
+    ;(function($){
  $.fn.scrollTop = function(options){
   var defaults = {
    speed:30
