--- a/FTWeb/View_Mobile/WX/hd/dbqb.html
+++ b/FTWeb/View_Mobile/WX/hd/dbqb.html
@@ -42,7 +42,7 @@ initial-scale=1,maximum-scale=1,user-scalable=no">
         <div class="actContent">
             <p><i class="mui-icon mui-icon-paperplane"></i>活动内容</p>
             <div class="mui-card-content">
-                <p ms-html="el.Remark"></p>
+                <p ms-html="el.JX"></p>
             </div>
         </div>
         <a class="gojoin" href="goods.html">我要夺宝</a>
