--- a/FTWeb/View_Mobile/WX/hd/igkbet.html
+++ b/FTWeb/View_Mobile/WX/hd/igkbet.html
@@ -44,6 +44,7 @@
         </div>
 
     </div>
+    <a  ms-if="ztdata.iskj=='N'" class="getJoin" style="width: 40%;float:left;" href="">拉朋友进团</a>
 </body>
 
 <script type="text/javascript" src="js/mui.min.js"></script>
